--- a/styles.css
+++ b/styles.css
@@ -7,41 +7,36 @@
 html {
     scroll-behavior: smooth;
 }
+
 body {
     margin: 0;
     color: rgb(255, 255, 255);
-    font-family: 'Hind', sans-serif;
+    font-family: 'Roboto', sans-serif;
+
 }
 
 #wrap {
-    /* overflow: hidden; */
+
     position: sticky;
     top: 0;
-    /* background-color: #252830; */
-    height: 60px;
 }
 
-/* #wrap {
-    position: sticky;
-} */
 nav {
     display: flex;
     justify-content: space-between;
-    /* top: 20px; */
-    font-weight: lighter;
     font-size: 15px;
-    /* bottom: 40px; */
-    /* position: sticky; */
-    /* top: 0; */
-    /* gap: 25em; */
+}
 
+nav.sticky {
+    background-color: #252830;
 }
 
 .logo {
-    height: 45px;
-    width: 130px;
-    margin-left: 15px;
-    margin-top: 10px;
+    height: 24px;
+    width: 107px;
+    margin-left: 18px;
+    margin-top: 20px;
+    margin-bottom: 15px;
 }
 
 nav ul {
@@ -49,7 +44,7 @@ nav ul {
     list-style-type: none;
     gap: 2.5em;
     margin-top: 25px;
-    margin-right: 40px;
+    margin-left: 51em;
     font-size: 13px;
 }
 
@@ -60,46 +55,45 @@ nav ul li a {
 
 nav ul li a:hover {
     color: rgb(102, 179, 243);
+    transition: all 1s ease;
 }
 
 header {
-    background-image: url('/assets/restaurant.jpg');
+    background-image: url('assets/restaurant.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    height: 170vh;
-    margin-top: -75px;
-    /* margin-left: -150px; */
+    margin-top: -70px;
+    margin-left: -20px;
+    display: flex;
+    flex-direction: column;
 
 }
 
 .text {
-    padding: 250px;
-    padding-top: 150px;
-    margin-left: -170px;
+    padding: 104px;
+    margin-top: 35px;
 }
 
 .text p {
-    font-size: 60px;
+    font-size: 54px;
     font-weight: 100;
-    margin-top: 50px;
-    font-family: 'Raleway', sans-serif;
+    margin-top: 35px;
+    font-family: 'Roboto', sans-serif;
 
 }
 
 .text h2 {
-    font-style: bold;
-    font-size: 100px;
+    font-size: 6em;
+    margin-bottom: 20px;
 
 }
 
 .container {
     display: flex;
-    /* justify-items: center; */
-    gap: 2.0em;
-    margin-left: 120px;
-    width: 90px;
-    margin-top: -30px;
+    gap: 20px;
+    padding: 95px;
+    overflow: hidden;
 
 }
 
@@ -107,8 +101,6 @@ header {
     background: rgb(255, 255, 255);
     background-size: 80px;
     height: 20em;
-    width: 30em;
-    border: 20px;
     color: black;
     text-align: center;
 }
@@ -122,17 +114,15 @@ header {
 }
 
 
-img {
+.content img {
     height: 12em;
-    width: 15em;
-    padding: 8px;
+    width: 17em;
+    padding: 5px;
 }
 
 section #our-story {
-    /* background-color:; */
     height: 90vh;
     font-family: 'Roboto', sans-serif;
-
 }
 
 .discovery h5 {
@@ -159,7 +149,7 @@ section #our-story {
 }
 
 article {
-    background-image: url('/assets/checked_menu.jpg');
+    background-image: url('assets/checked_menu.jpg');
     background-size: cover;
     height: 43em;
     background-attachment: fixed;
@@ -192,7 +182,7 @@ article p span {
     color: rgb(255, 255, 255);
     font-size: 20px;
     padding: 23px 50px;
-    font-family: Tahoma, Geneva, sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-weight: 400;
     background: #ffb647;
     border-radius: 8px;
@@ -206,12 +196,10 @@ article p span {
 }
 
 .info-container {
-    background-image: url('/assets/pattern-bg2.png');
+    background-image: url('assets/pattern-bg2.png');
     color: rgb(51, 51, 51);
     display: flex;
     justify-content: space-between;
-    height: 145vh;
-    background-size: center;
     padding-left: 70px;
     padding-right: 70px;
 }
@@ -239,10 +227,10 @@ article p span {
 }
 
 .rating {
-    background-image: url('/assets/bg21.jpg');
+    background-image: url('assets/bg21.jpg');
     background-size: cover;
     background-repeat: no-repeat;
-    height: 70vh;
+    /* height: 75vh; */
     background-position: center;
 }
 
@@ -253,26 +241,31 @@ article p span {
     padding-top: 8em;
 }
 
+.rating ul .material-icons {
+    font-size: 45px;
+}
+
 .rating p {
     text-align: center;
     font-family: 'Roboto', sans-serif;
     font-weight: 100;
-    line-height: 1.5;
+    line-height: 1.5em;
     font-size: 25px;
     letter-spacing: 0.5px;
-    padding: 2em;
+    padding: 3em;
 }
 
-.rating small {
+.rating .small {
     font-family: 'Hind', sans-serif;
     opacity: 0.5;
     text-align: center;
-    padding: 45em;
+    padding: 3em;
+    font-size: 18px;
 }
 
 .countdown {
     height: 30em;
-    background-image: url("/assets/bg5.jpeg");
+    background-image: url("assets/bg5.jpeg");
     display: flex;
     justify-content: space-between;
     color: black;
@@ -297,7 +290,7 @@ article p span {
 }
 
 .booking {
-    background-image: url("/assets/bg36.jpeg");
+    background-image: url("assets/bg36.jpeg");
     height: 55em;
     display: flex;
     justify-content: space-between;
@@ -308,7 +301,6 @@ article p span {
     font-weight: lighter;
     font-family: 'Roboto', sans-serif;
     line-height: 3.5;
-    /* line-height: 1.2; */
 }
 
 .booking form {
@@ -326,26 +318,20 @@ article p span {
     outline: none;
 }
 
-/* .form:focus {
-    outline: none;
-} */
-
 .booking hr {
     opacity: 0.3;
-    /* width: 90px; */
 }
 
 .book {
-    color: rgb(255, 255, 255);
+    color: rgb(224, 224, 224);
     font-size: 20px;
     padding: 18px 250px;
-    font-family: Tahoma, Geneva, sans-serif;
-    font-weight: 400;
+    font-family: 'Roboto', sans-serif;
+    font-weight: lighter;
     background: #ffb647;
     border-radius: 8px;
     border: 0;
     margin-left: 80px;
-    /* margin-top: 20px; */
     text-align: center;
 }
 
@@ -357,21 +343,25 @@ article p span {
     line-height: 1.5;
     padding: 250px 0px 20px 0px;
     margin-right: 80px;
+    font-family: 'Roboto';
+    font-size: 20px;
+    font-weight: lighter;
 }
 
 .book_info p {
     font-size: 17px;
+    font-weight: lighter;
+    font-size: 15px;
 }
 
 .schedule {
     display: block;
     gap: 1.5em;
-    /* padding-top: 40px;  */
 }
 
 .schedule i {
-    /* opacity: 0.4; */
     padding: 20px;
+    opacity: 0.5;
 }
 
 footer {
@@ -409,9 +399,10 @@ footer ul {
 
 .social ul li a {
     font-size: 30px;
-    color: rgb(110,110,110);
+    color: rgb(110, 110, 110);
 }
 
-.social ul li a i:hover{
+.social ul li a i:hover {
     color: white;
+    transition: all 1s ease;
 }
